--- a/inclass_activity/NER/logm655_fa2018_NER.Rmd
+++ b/inclass_activity/NER/logm655_fa2018_NER.Rmd
@@ -152,11 +152,14 @@ These more in depth steps to rule based incorporate multipe entity rules and whi
 
 ##Evaluation Methods
 
-NER systems are evaluated by recall, precision, and $F_1$ measure. Recall is the ratio fo the number of correcetly labeled responses to the total that should have been labeled. Precision is the ratio of the number of correctly labeled respsonses to the total labeled. The F-measure is the harmonic mean of the two. These metrics all treat the entities are the response rather than the words.
+NER systems are evaluated by recall, precision, and $F_1$ measure. Recall is the ratio fo the number of correcetly labeled responses to the total that could have been labeled in the text. It is the measure of how much relevant information the system has extracted (coverage of system). 
 
-There is mismatch between the training and test conditions that develops from using the entities as the response units. Also the segmentation done in NER can create undue error. For example, identifying the entity _American_ as an organization instead of _America Airlines_ would cause two errors. 
-  - a false positive for an Organization entity
-  - a false negative for I-Organization (Airlines)
+Precision is the ratio of the number of correctly labeled respsonses to the total actually labeled by the system. It is the measure of how much of the information the system returned is correct (accuracy). The F-measure is the harmonic mean of the two. These metrics all treat the entities are the response rather than the words.
+
+There is mismatch between the training and test conditions that develops from using the entities as the response units. Also the segmentation done in NER can create undue error. For example, identifying the entity _American_ as an organization instead of _America Airlines_ would cause two errors.
+
+* a false positive for an Organization entity
+* a false negative for I-Organization (Airlines)
 
 =======
 
