--- a/inclass_activity/NER/logm655_fa2018_NER_examples.Rmd
+++ b/inclass_activity/NER/logm655_fa2018_NER_examples.Rmd
@@ -17,8 +17,11 @@ knitr::opts_chunk$set(echo = TRUE,
 
 ```
 
+Text Paragraph
+```{r}
+text <- "In the 19th century, the major European powers had gone to great lengths to maintain a balance of power throughout Europe, resulting in the existence of a complex network of political and military alliances throughout the continent by 1900.[7] These had started in 1815, with the Holy Alliance between Prussia, Russia, and Austria. Then, in October 1873, German Chancellor Otto von Bismarck negotiated the League of the Three Emperors (German: Dreikaiserbund) between the monarchs of Austria-Hungary, Russia and Germany."
 
-
+```
 
 
 
