--- a/inclass_activity/NER/logm655_fa2018_NER_examples.Rmd
+++ b/inclass_activity/NER/logm655_fa2018_NER_examples.Rmd
@@ -23,6 +23,19 @@ text <- "In the 19th century, the major European powers had gone to great length
 
 ```
 
+OR here's another text, maybe try both 
+
+
+```{r}
+text <- ("A panel of Goldman Sachs employees spent a recent Tuesday night at the Columbia University faculty club trying to convince a packed room of potential recruits that Wall Street, not Silicon Valley, was the place to be for computer scientists.
+
+The Goldman employees knew they had an uphill battle. They were fighting against perceptions of Wall Street as boring and regulation-bound and Silicon Valley as the promised land of flip-flops, beanbag chairs and million-dollar stock options.
+
+Their argument to the room of technologically inclined students was that Wall Street was where they could find far more challenging, diverse and, yes, lucrative jobs working on some of the world’s most difficult technical problems.
+
+“Whereas in other opportunities you might be considering, it is working one type of data or one type of application, we deal in hundreds of products in hundreds of markets, with thousands or tens of thousands of clients, every day, millions of times of day worldwide,” Afsheen Afshar, a managing director at Goldman Sachs, told the students.")
+```
+
 
 
 
