--- a/inclass_activity/NER/logm655_fa2018_NER_examples.Rmd
+++ b/inclass_activity/NER/logm655_fa2018_NER_examples.Rmd
@@ -8,7 +8,7 @@ output:
     code_folding: 'hide'
 ---
 
-
+# Named Entity Recognition using openNLP
 ```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       message = F,
@@ -17,34 +17,104 @@ knitr::opts_chunk$set(echo = TRUE,
 
 ```
 
-Text Paragraph
+In order for openNLP to work, you must first download the following package
+```{r open load, results='hide'}
+ install.packages("openNLPmodels.en",
+                 repos = "http://datacube.wu.ac.at/",
+                 type = "source")
+```
+Next, load the following packages, or call them from the library.
 ```{r}
-text <- "In the 19th century, the major European powers had gone to great lengths to maintain a balance of power throughout Europe, resulting in the existence of a complex network of political and military alliances throughout the continent by 1900.[7] These had started in 1815, with the Holy Alliance between Prussia, Russia, and Austria. Then, in October 1873, German Chancellor Otto von Bismarck negotiated the League of the Three Emperors (German: Dreikaiserbund) between the monarchs of Austria-Hungary, Russia and Germany."
+
+pacman::p_install(c("openNLP","cleanNLP","readr","NLP","monkeylearn"))
+
+# Or if you already have them installed, just load the libraries
+
+library(openNLP)
+library(NLP)
+library(cleanNLP)
+library(monkeylearn)
+```
+
+
+Now that the packages are loaded, we need to insert the text documents
+
+```{r}
+
+rem <- readr::read_file("Remington.txt")
+
+
 
 ```
 
-OR here's another text, maybe try both 
+
+
+# Named Entity Recognition using coreNLP
 
 
 ```{r}
-text <- ("A panel of Goldman Sachs employees spent a recent Tuesday night at the Columbia University faculty club trying to convince a packed room of potential recruits that Wall Street, not Silicon Valley, was the place to be for computer scientists.
 
-The Goldman employees knew they had an uphill battle. They were fighting against perceptions of Wall Street as boring and regulation-bound and Silicon Valley as the promised land of flip-flops, beanbag chairs and million-dollar stock options.
 
-Their argument to the room of technologically inclined students was that Wall Street was where they could find far more challenging, diverse and, yes, lucrative jobs working on some of the world’s most difficult technical problems.
-
-“Whereas in other opportunities you might be considering, it is working one type of data or one type of application, we deal in hundreds of products in hundreds of markets, with thousands or tens of thousands of clients, every day, millions of times of day worldwide,” Afsheen Afshar, a managing director at Goldman Sachs, told the students.")
 ```
+# Named Entity Recognition using monkeylearn
 
 
 
 
+# Challenges of Named Entity Recognition
+
+The NER pieces of the different NLP packages worked fairly well for the State of the Union Addresses.  However, using the article from class on Monday, problems arose when attempting to identify persons, locations, and organizations.
+
+```{r}
+
+s <- as.String(rem)
+
+sent_token_annotator <- Maxent_Sent_Token_Annotator()
+word_token_annotator <- Maxent_Word_Token_Annotator()
+
+a2 <- annotate(text, list(sent_token_annotator, word_token_annotator))
+
+
+## Entity recognition for persons.
+entity_annotator <- Maxent_Entity_Annotator()
+annotate(s, entity_annotator, a2)
+## Directly:
+entity_annotator(s, a2)
+## And slice ...
+s[entity_annotator(s, a2)]
+
+#Entity recognition for locations
+entity_annotator_location <- Maxent_Entity_Annotator(kind = "location")
+annotate(s, entity_annotator_location, a2)
+## Directly:
+entity_annotator_location(s, a2)
+## And slice ...
+s[entity_annotator_location(s, a2)]
+## Variant with sentence probabilities as features.
+annotate(s, Maxent_Entity_Annotator(probs = TRUE), a2)
+
+
+
+#Entity Recognition for Organizations
+entity_annotator_org <- Maxent_Entity_Annotator(kind = "organization")
+annotate(s, entity_annotator_org, a2)
+## Directly:
+entity_annotator_org(s, a2)
+## And slice ...
+s[entity_annotator_org(s, a2)]
+
+#Entity Recognition for dates
+entity_annotator_date <- Maxent_Entity_Annotator(kind = "date")
+annotate(s, entity_annotator_date, a2)
+## Directly:
+entity_annotator_date(s, a2)
+## And slice ...
+s[entity_annotator_date(s, a2)]
 
 
 
 
-
-
+```
 
 
 
