--- a/inclass_activity/NER/inclassexampleNEW.Rmd
+++ b/inclass_activity/NER/inclassexampleNEW.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(echo = TRUE,
 In order for openNLP to work, you must first download the following package
 ```{r , results='hide'}
 
-options( java.parameters = "-Xmx5120m" )
+options( java.parameters = "-Xmx8g" )
 # install.packages("openNLPmodels.en", repos = "http://datacube.wu.ac.at/",type = "source")
 ```
 Next, load the following packages, or call them from the library.
