including html doc

--- a/student_project_folders/logm655_fa2018_hyder/logm655_fa2018_hyder.Rmd
+++ b/student_project_folders/logm655_fa2018_hyder/logm655_fa2018_hyder.Rmd
@@ -7,7 +7,7 @@ output:
     code_folding: 'hide'
     toc: yes
     toc_float: yes
-abstract: 'Fairy Tales span across cultures, topics, and time periods. They have simple plots which deliver a clear message. For these reasons fairy tales are useful for text analysis. This project uses a corpus of 61 fairy tales from Charles Perrault and the Brothers Grimm to test how written sentiment in fairy tales differs across topic, story line and culture. Sentiment is quantified and compared using three lexicons: *BING*, *AFINN* and *NRC*. The results of sentiment analysis in this project indicate that written sentiment differs more across fairy tales of different topics than it does between cultural variations of common fairy tales. Despite common sentiment between versions, sentiment analysis throughout a fairy tale at a sentence level shows how cultural versions of stories have endings with different sentiment. This project conjectures that sentiment analysis across a story can be a useful technique for identifying critical sentences of emotion within a story.'
+abstract: 'Fairy Tales span across cultures, topics, and time periods. They have simple plots which deliver a clear message. For these reasons, fairy tales are useful for text analysis. This project uses a corpus of 61 fairy tales from Charles Perrault and the Brothers Grimm to test how written sentiment in fairy tales differs across topic, story line and culture. Sentiment is quantified and compared using three lexicons: *BING*, *AFINN* and *NRC*. The results of sentiment analysis in this project indicate that written sentiment differs more across fairy tales of different topics than it does between cultural variations of common fairy tales. Despite common sentiment between versions, sentiment analysis throughout a fairy tale at a sentence level shows how cultural versions of stories have endings with different sentiment. This project conjectures that sentiment analysis across a story can be a useful technique for identifying critical sentences of emotion within a story.'
 ---
 
 ```{r setup, include=FALSE, echo=FALSE}
